src/app/index.styl
/**
 *  Do not remove this comments bellow.
 *  It's the markers used by wired to inject stylus dependencies
 *  when defined in the bower.json of your dependencies
 */
// bowerstyl
// endbower

@require "index.typography.styl"

$font-header = "Exo 2", sans-serif
$font-body = "Oxygen", sans-serif
$font-code = "Oxygen Mono", sans-serif

$red-50  = #ffebee
$red-100 = #ffcdd2
$red-500 = #f44336
$red-700 = #d32f2f
$red-900 = #b71c1c

::selection
  text-shadow none
  background $red-100
  img&
    background transparent

html
  font-family $font-body

body
  color #b71c1c

[layout=row]
  flex-direction row

header
  height 60px

h1, h2, h3, h4, h5, h6
  font-family $font-header
  padding 20px 0
  margin 0
  md-card-content &
    padding 0
    margin 0
  md-display-1
    margin 0

p
  margin 15px
  &.small
    margin 0
    // padding 10px
    font-size 1em

a
  color $red-900
  position relative
  text-decoration none
  -webkit-transition all 0.5s ease
  transition all 0.5s ease
  & *
    -webkit-transition all 0.5s ease
    transition all 0.5s ease
  &:hover h2
    color $red-500
  &.md-button
    -webkit-transition all 0.5s ease
    transition all 0.5s ease
  i
    color #fff
    margin 15px
  header &.md-button
    border-radius 10px
    border 2px solid white
    line-height 2em
    &.active
      border-color $red-900
  &[rel="license"]
    color $red-50
    border-bottom 1px solid $red-50

hr
  margin 0
  height 10px
  border 0
  &.top
    box-shadow 0 -15px 15px -15px #757575 inset
  &.bottom
    box-shadow 0 15px 15px -15px #757575 inset

section
  text-align center
  padding 60px 0
  &.jumbotron
    margin-top 0
    margin-bottom 0
    padding 2% 5%
    background-color #931717
    text-align left
    color white
    background-image url('/assets/images/bg.jpg')
    background-position right
    background-repeat no-repeat
    &.vertical-center
      min-height 100%
      min-height 75vh
      display flex
      align-items center
    h1
      font-size 1.8em
  p, span
    font-size 1.2em

code
  font-family $font-code

footer
  text-align center
  padding 2em 0
  background-color #b71c1c
  color #fff

#logo
  width 168px
  height 48px
  background-image url("/assets/images/agnium.svg")
  background-position center
  @media only screen and (min-width 480px)
    width 48px
    background-position 0 48px
  @media only screen and (min-width 720px)
    width 168px
    background-position center

#with, #what, #which, #who, #will
  &:before
    content ""
    display block
    margin 0 auto
    width 100px
    height 2px
    background-color $red-900

#ticker, #where, #social
  background-color #e53935
  color #fff

#ticker
  padding 0
  height 20px

#where
  padding-bottom 10px
  address
    text-align left
    font-style normal
    h3
      text-align center
      padding-bottom 30px
    a.md-button:not(.md-icon-button)
      text-align left
      vertical-align middle
    a.md-button span
      font-family $font-body !important
    a.md-icon-button
      vertical-align middle
    .side
      display inline-block
  h2
    margin-top 20px
    margin-bottom 20px
  h3
    font-size 1.6em
  span, p
    font-size 21px
  .maps
    overflow hidden
    md-card-content
      flex 0 1 600px
      min-width 600px
      padding 0
      background-position 50% 50%
      background-image: url(http://api.tiles.mapbox.com/v4/agnium.ae95e2fe/106.842199,-6.224568,16/600x600.jpg80?access_token=pk.eyJ1IjoiYWduaXVtIiwiYSI6IjI0YmI1ZTljODg2YjRjMDZiMGU1ZTU1ZGE2ZTI2NjQ2In0.i4ED2rsbkFKnAPg5OSHZog);



#social
  padding-top 0

md-card
  min-height 50px
  border-radius 10px
  md-card-content
    padding 30px 10px
    color $red-900
    border-radius 10px
  .md-card-image
    border-radius 10px 10px 0 0

md-whiteframe
  background #fff
  padding 20px
  width 75%
  margin 0 auto

.md-button
  text-transform none
  &.md-hue-1
    border-radius 10px !important
  &.md-fab
    border-radius 50%
    md-icon
      color $red-900
  &.md-raised
    margin 10px 10px
  header &, & span
    font-family $font-header
    font-size 1em

.browsehappy
  margin 0.2em 0
  background #ccc
  color #000
  padding 0.2em 0

.courses, .services, .members
  display flex
  flex-flow row wrap
.courses, .services
  md-card
    width 80%
    a
      min-height 100px
      padding-top 40px
    img
      width auto
      height 100px

.where-details
  display flex
  flex-flow row wrap

.clients
  display flex
  flex-flow row wrap
  img
    width auto
    padding 20px

.members
  md-card
    width 40%
    img
      &.pull-right
        float right
        width 100px

.cta
  text-transform uppercase
  font-size 1.2em
  letter-spacing 2px
  margin 0 auto
  .long&
    width 350px
    .jumbotron &
      margin-left 0
  .big&
    font-size 1.6em
    line-height 60px
    width 90%
  .white&
    background-color #fff
    color $red-900 !important

.links
  margin 20px 0
  .icon
    margin 0 10px
    line-height 42px
    img
      width 42px
      height 42px

.no-border
  border-top-color none

@media (min-width 480px)

  section
    padding 80px 20px
    &.jumbotron
      h1
        font-size 2.2em
    p, span
      font-size 1.4em

@media (min-width 960px)

  #logo
    margin 0 30px

  section
    &.jumbotron
      padding 5% 10%
      h1
        font-size 3em
    padding 90px 30px

  .md-button
    header &
      width 100px
      padding 2px 10px

  .courses, .services
    md-card
      width 20%

  .where-details
    md-card
      -webkit-flex 0 0 45%
      -ms-flex 0 0 45%
      flex 0 0 45%

  .members
    md-card
      width 20%

  .cta
    &.long
      width 500px
    &.big
      height 60px
      width 900px

  .more
    font-size 1.6em

@media (max-width 960px)

  section
    &.jumbotron
      background-position 80% 0%

  #where
    .maps
      md-card-content
        flex 0 1 500px
        min-width 500px

@media (max-width 480px)

  .desktop
    display none

  .mobile
    display inline

  section
    &.jumbotron
      background-position 80% 20%

  h1, h2, h3, h4, h5, h6
    padding 10px 0

  .md-button
    header &, & span
      font-size 0.8em

  .cta
    &.long
      width 90%
    &.big
      height 60px
      width 90%

  md-whiteframe
    padding 0
    margin-top 20px

  #where
    .maps
      md-card-content
        flex 0 1 400px
        min-width 400px

/**
 *  Do not remove this comments bellow. It's the markers used by gulp-inject to inject
 *  all your stylus files automatically
 */
// injector
// endinjector

